SVN: Bug#224902  - concurrency test failure fix.
Changes:

- Changed getCacheKeyPutIfAbsent in identity maps to first do a get, then a putIfAbsent, to avoid concurrency bottleneck on put lock if in the cache.

- Did some micro optimizations in identity maps access.

- Removed dead put method from IdentityMaps.

- Added finally to FetchGroupManager change events disable block.

- Fixed foundation test script for typo and to use security manager property.

- Switched test result database as starteam is down.